# peer-observer

./: Cargo.toml  README.md  shell.nix
.github/actions/install-bitcoin/: action.yml
.github/actions/setup-nix-action/: action.yml
.github/actions/setup-ubuntu-action/: action.yml
.github/workflows/: ci.yml  rust-nix.yml  rust-ubuntu.yml  ubuntu.yml
extractors/ebpf/: Cargo.toml  README.md
extractors/ebpf/src/: error.rs  lib.rs  main.rs
extractors/ipc/: Cargo.toml  README.md  build.rs
extractors/ipc/capnp/: chain.capnp  common.capnp  echo.capnp  handler.capnp  init.capnp  mining.capnp
extractors/ipc/capnp/mp/: proxy.capnp
extractors/ipc/src/: error.rs  ipc.rs  lib.rs  main.rs
extractors/ipc/tests/: integration.rs
extractors/log/: README.md
extractors/log/src/: lib.rs
extractors/log/tests/: integration.rs
extractors/p2p/: README.md
extractors/p2p/src/: lib.rs
extractors/p2p/tests/: integration.rs
extractors/rpc/: README.md
extractors/rpc/src/: error.rs  lib.rs  metrics.rs
extractors/rpc/tests/: integration.rs
extractors/rpc/tests/common/: mod.rs
protobuf/: event.proto  ipc_extractor.proto  rpc_extractor.proto
shared/: Cargo.toml
shared/src/: lib.rs  log_matchers.rs  nats_subjects.rs  nats_util.rs  util.rs
shared/src/fixtures/: test-password-file.txt
shared/src/protobuf/: ipc_extractor.rs  mod.rs  rpc_extractor.rs
shared/src/testing/: nats_server.rs
tools/archiver/: Cargo.toml  README.md  build.rs
tools/archiver/src/: error.rs  lib.rs  main.rs
tools/archiver/tests/: integration.rs
tools/connectivity-check/: README.md
tools/connectivity-check/src/: main.rs
tools/logger/: README.md
tools/logger/src/: error.rs  lib.rs
tools/logger/tests/: integration.rs
tools/metrics/: README.md
tools/metrics/dashboards/: logs.json
tools/metrics/src/: lib.rs  metrics.rs
tools/metrics/tests/: integration.rs
tools/replayer/: Cargo.toml
tools/replayer/src/: lib.rs  main.rs
tools/websocket/: README.md
tools/websocket/src/: lib.rs
tools/websocket/tests/: integration.rs
tools/websocket/www/: addrspace.html  index.html
tools/websocket/www/js/: lib.js
