[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.14.1"
bitcoin = "0.32"
base32 = "0.5.1" # for encoding Tor/Onion addresses
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.45", features = ["derive"] }
simple_logger = "5.0.0"
log = "0.4"
async-nats = "0.44.1"
prometheus = "0.14.0"
lazy_static = "1.5.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "process", "signal"] }
futures = "0.3.31"
rand = "0.9.2"
time = "0.3.44"
regex = "1.12"

# Use custom commit to support:
# - cpu_load and inv_to_send in getpeerinfo
# (branch 2026-01-v0.11-peer-observer-custom)
corepc-node = { git = "https://github.com/0xb10c/corepc", rev = "b20f2c34f2f8baafa41a7d809349913d2ef95750", features = ["download", "30_2"] }
corepc-client = { git = "https://github.com/0xb10c/corepc", rev = "b20f2c34f2f8baafa41a7d809349913d2ef95750", features = ["client-sync"]}

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
hex = "0.4"

[features]
# Treat warnings as a build error.
strict = []

# Run integration tests needing a NATS server.
nats_integration_tests = []
