[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.14.1"
bitcoin = "0.32"
base32 = "0.5.1" # for encoding Tor/Onion addresses
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.60", features = ["derive"] }
simple_logger = "5.2.0"
log = "0.4"
async-nats = { version = "0.46.0", default-features = false } 
prometheus = "0.14.0"
lazy_static = "1.5.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "process", "signal"] }
futures = "0.3.31"
rand = "0.9.2"
time = { version = "0.3.47", features = ["parsing"] }
regex = "1.12"

# Use custom commit to support:
# - cpu_load and inv_to_send in getpeerinfo
# - and master has the fix https://github.com/rust-bitcoin/corepc/pull/483
# (branch 2026-02-v0.11-peer-observer-custom)
# When updating the Bitcoin Core version used, grep for CORE_VERSION_GREP
# and update the corepc_client::types::v* to the new version.
corepc-node = { git = "https://github.com/0xb10c/corepc", rev = "b777fa7160c7b97e1e845e771953a158233660cd", features = ["download", "30_2"] }
corepc-client = { git = "https://github.com/0xb10c/corepc", rev = "b777fa7160c7b97e1e845e771953a158233660cd", features = ["client-sync"]}

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
hex = "0.4"

[features]
# Treat warnings as a build error.
strict = []

# Run integration tests needing a NATS server.
nats_integration_tests = []
