[package]
name = "ipc-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
capnp = "0.25.1"
capnp-rpc = "0.25.0"
shared = { path = "../../shared" }
tokio-util = { version = "0.7.18", features = ["compat"] }

[features]
# Treat warnings as a build error.
strict = []

# Run integration tests needing a NATS server.
nats_integration_tests = []

# Run integration tests needing a Bitcoin Core node.
node_integration_tests = []

[build-dependencies]
capnpc = "0.25.0"
