[package]
name = "archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
zstd = "0.13"

[dev-dependencies]
sha2 = "0.10"
toml = "0.8"

[features]
# Treat warnings as a build error.
strict = []
# Run integration tests needing a NATS server.
nats_integration_tests = []
